# flutter-UI_rust-BE-example

./: .envrc  .gitignore  Cargo.toml  Cargo.toml.hidden  README.md  flake.nix  flutter_rust_bridge.yaml  justfile  rust-toolchain.toml
app_core/: Cargo.toml  build.rs.disabled
app_core/app_core.xcodeproj/: project.pbxproj
app_core/app_core.xcodeproj/project.xcworkspace/xcuserdata/patmuk.xcuserdatad/: UserInterfaceState.xcuserstate
app_core/app_core.xcodeproj/xcuserdata/patmuk.xcuserdatad/xcschemes/: xcschememanagement.plist
app_core/examples/: main.rs
app_core/generate_api_macros/: Cargo.toml
app_core/generate_api_macros/src/: generate_api_macro_impl.rs  lib.rs  read_rust_files.rs  utils.rs
app_core/generate_api_macros/src/utils/: file_location_2_base_path.rs  read_rust_files.rs
app_core/generate_api_macros/tests/: build_test.rs  ui_tests.rs  unit_tests.rs
app_core/generate_api_macros/tests/fixtures/: good_source_file.rs
app_core/generate_api_macros/tests/fixtures/src/: good_source_file.rs
app_core/generate_api_macros/tests/mocks/: app_state_mock.rs  cqrs_traits_mock.rs  rust_auto_opaque.rs  rust_auto_opaque_mock.rs
app_core/generate_api_macros/tests/ui/: ui_tests.rs
app_core/generate_api_macros/tests/ui_tests/: Cargo.toml
app_core/generate_api_macros/tests/ui_tests/src/: good_source_file.rs  lib.rs  mocks.rs
app_core/generate_api_macros/tests/ui_tests/src/mocks/: app_state_mock.rs  cqrs_traits_mock.rs  rust_auto_opaque_mock.rs
app_core/generate_api_macros/tests/ui_tests/tests/: ui_tests.rs
app_core/src/: api.rs  app_state.rs  application.rs  domain.rs  infrastructure.rs  lib.rs  main.rs  main.rs.hidden  share_pictures.rs  state.rs  todo_list.rs  utils.rs
app_core/src/api/: lifecycle.rs  mod.rs  todo_list_api.rs
app_core/src/application/: api.rs  app_config.rs  app_state.rs  processing_errors.rs  state_test.rs
app_core/src/application/api/: api_traits.rs  lifecycle.rs  processing.rs  processing_macro.rs  todo_list_api.rs
app_core/src/application/bridge/: mod.rs
app_core/src/bridge/: mod.rs
app_core/src/domain/: app_state.rs  common_value_objects.rs  effects.rs  processing_errors copy.rs  todo_category.rs  todo_list.rs
app_core/src/infrastructure/: app_state_db_persister.rs  app_state_file_persister.rs  app_state_persistance_error.rs
app_core/src/utils/: cqrs_traits.rs
core/: .flutter_rust_bridge.yml  Cargo.toml  build.rs
core/core.xcodeproj/: project.pbxproj
core/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  lib.rs  lib_crux.rs
flutter_sample/: README.md  pubspec.yaml
flutter_sample/android/app/: build.gradle
flutter_sample/ios/Runner/: Info.plist
flutter_sample/ios/Runner.xcodeproj/: project.pbxproj
flutter_sample/linux/: CMakeLists.txt
flutter_sample/linux/runner/: my_application.cc
flutter_sample/macos/Runner.xcodeproj/: project.pbxproj
flutter_sample/web/: index.html  manifest.json
flutter_sample/windows/: CMakeLists.txt
flutter_sample/windows/runner/: Runner.rc  main.cpp
my_app/.dart_tool/: package_config.json  package_config_subset
my_app/android/: local.properties
my_app/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
nix/: flutter-local.nix  flutter_rust_bridge_codegen.nix
rust_sample/: Cargo.toml
shared_types/: Cargo.toml  build.rs
shell_cli/: Cargo.toml
shell_cli/shell_cli.xcodeproj/: project.pbxproj
shell_cli/src/: main.rs
shell_flutter/: .flutter_rust_bridge.yml  .metadata  README.md  flutter_rust_bridge.yaml  pubspec.yaml
shell_flutter/android/: settings.gradle
shell_flutter/android/app/: build.gradle
shell_flutter/integration_test/: simple_test.dart  state_api_test.dart  todo_list_api_test.dart
shell_flutter/ios/: Podfile
shell_flutter/ios/Runner/: Info.plist  bridge_generated.h
shell_flutter/ios/Runner.xcodeproj/: project.pbxproj
shell_flutter/lib/: bridge_definitions.dart  bridge_definitions.freezed.dart  bridge_generated.dart  bridge_generated.freezed.dart  bridge_generated.io.dart  bridge_generated.web.dart  ffi.dart  main.dart  state_handler.dart
shell_flutter/linux/: CMakeLists.txt  my_application.cc
shell_flutter/linux/runner/: my_application.cc
shell_flutter/macos/Runner/: bridge_generated.h
shell_flutter/macos/Runner.xcodeproj/: project.pbxproj
shell_flutter/messages/: crux.proto  todo_list.proto
shell_flutter/native/app_core/: Cargo.toml
shell_flutter/native/hub/: Cargo.toml
shell_flutter/rust/: Cargo.toml
shell_flutter/test/: widget_test.dart
shell_flutter/web/: index.html  manifest.json
shell_flutter/windows/: CMakeLists.txt
shell_flutter_frb/: README.md
shell_flutter_frb/lib/: ffi.dart  main.dart
shell_flutter_frb/linux/: CMakeLists.txt
shell_flutter_frb/windows/: CMakeLists.txt
shell_flutter_v1/: .metadata  flutter_rust_bridge.yml
shell_flutter_v1/web/: index.html
(+63 files in other folders)
