[workspace]
members = ["app_core", "shell_cli"]

[workspace.package]
resolver = "2"
authors = ["PSTT"]
edition = "2021"
repository = "https://github.com/patmuk/flutter-UI_rust-BE-example"
license = "Apache-2.0"
keywords = ["frb", "flutter_rust_bridge", "backend", "example", "cqrs", "crux"]

[workspace.dependencies]
thiserror = "^2.0.6"
tokio = { version = "^1.40.0", features = ["rt", "macros"] }
