[workspace]
members = ["app_core", "shell_cli"]
resolver = "3"

[workspace.package]
authors = ["PSTT"]
version = "0.2.0"
edition = "2024"
repository = "https://github.com/patmuk/flutter-UI_rust-BE-example"
license = "Apache-2.0"
keywords = ["frb", "flutter_rust_bridge", "backend", "example", "cqrs", "crux"]

[workspace.dependencies]
thiserror = "^2.0.6"
log = "^0.4"
simple_logger = "^5.0.0"
