[package]
name = "app_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.8.0"
thiserror = "^2.0.6"

log = "^0.4"
simple_logger = "^5.0.0"
serde = { version = "^1.0.38", features = ["derive"] }
bincode = "^1.3.3"

generate_cqrs_api_macro = { git = "https://github.com/patmuk/generate_cqrs_api_macros", branch = "master" }
cps = "0.2.3"

[dev-dependencies]
serial_test = "3.0.0"
syn = "2.0.79"
quote = "1.0.37"

[build-dependencies]
flutter_rust_bridge_codegen = "=2.4.0"
anyhow = "1.0"
