[package]
name = "app_core"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.8.0"
generate_cqrs_api_macro = { git = "https://github.com/patmuk/generate_cqrs_api_macros", branch = "master" }

thiserror.workspace = true
log.workspace = true
simple_logger.workspace = true
serde = { version = "^1.0.38", features = ["derive"] }
bincode = { version = "^2.0.1", features = ["serde"] }

[dev-dependencies]
serial_test = "3.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
