[package]
name = "shell_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
    name = "todo"
    path = "src/main.rs"

[dependencies]
core = { path = "../core" }
bcs = "0.1.5"
# crossbeam-channel = "0.5.7"
# clap = { version = "4.1.8", features = ["derive"] }
# eyre = "0.6.8"
