[package]
name = "generate_api_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
log = "0.4.22"
simple_logger = "5.0.0"
proc-macro2 = "1.0.88"
# syn = "2.0.79"
syn = {version = "2.0.79", features = ["full"]}
quote = "1.0.37"

# TODO remove once failed result is visible in tests
prettyplease = "0.2.24"
# litrs = "0.4.1"
trybuild = "1.0.101"

thiserror = "^1.0.51"

# [dev-dependencies]
# syn = "2.0.79"
# quote = "1.0.37"